2012-01-25  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (zerop): Misspelling in error message.

	* lib.c (sub_list, replace_list, sub_vec, replace_vec):
	Allow the value t to specify one element past the end, so that t t
	refers to zero-length sequence just past the end of the array or list.
	Also, fixed out of bounds memmoves in replace_vec.

2012-01-25  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): New functions registered.

	* lib.c (sub_list, replace_list, vectorp): New functions.
	(sub_vec): Allow negative indices from end of array.
	(replace_vec): New function.

	* lib.h (sub_list, replace_list, vectorp, replace_vec): Declared.

	* parser.l (DOTDOT): Scan .. as new token.

	* parser.y (DOTDOT): New token.
	(expr): New syntax with DOTDOT.
	(yybadtoken): Handle DOTDOT.

	* txr.vim: Added new functions. Also missing append* and dwim.

	* txr.1: Updated.

2012-01-25  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim (txr_chr): Fix for highlighting named characters
	like #\newline.

2012-01-25  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (dwim_s): New symbol variable.
	(dwim_loc, op_dwim): New static functions.
	(op_modplace): Support assignment to dwim forms
	with the help of dwim_loc.
	(expand_place): Handle dwim places.
	(eval_init): Initialize dwim_s. Register dwim operator
	in op_table.

	* eval.h (dwim_s): Declared.

	* lib.c (chr_str, chr_str_set): Allow negative indices to index
	backwards from end of string.
	(vecref, vecref_l): Allow negative indices to index from
	rear of array.
	(obj_print, obj_pprint): Render (dwim ...) forms as [...].

	* parser.l: Peoduce new METABKT token type for @[,
	and '[', ']' tokens.

	* parser.y (METABKT): New token. %type declaration for '['.
	(list): Support square-bracket style of list, translated
	into dwim form.
	(meta_expr): Support @[...] variant.
	(yybadtoken): Handle METABKT in switch.

	* txr.1: Documented [...] syntax and dwim operator.

	* txr.vim: Updated.

2012-01-21  Kaz Kylheku  <kaz@kylheku.com>

	Version 54
